<resources>
    <string name="app_name">Weather Alert</string>
    <string name="weatherDesc">Weather Description</string>
    <string name="date" />
    <string name="Date">Monday, 5 May</string>
    <string name="humidity">"humidity "</string>
    <string name="windSpeed">"Wind Speed "</string>
    <string name="temperature">20</string>
    <string name="nextHourly">next hourly</string>
    <string name="next15Dayes">next 7 Dayes</string>
    <string name="location">location</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="pressure">pressure</string>
    <string name="Clouds">Clouds</string>
    <string name="feels_like">"feels like:  "</string>
    <string name="windspeed">"wind speed : "</string>
    <string name="Humidity">"Humidity : "</string>
    <string name="Pressure">"pressure : "</string>
    <string name="clouds">"Clouds : "</string>
    <string name="daily_date">Daily Date</string>
    <string name="temp">Temp.</string>
    <string name="Temp">"Temp. : "</string>
    <string name="description">"Description : "</string>
    <string name="AddFav">Add your favorite places</string>
    <string name="place">place</string>
    <string name="search">Search</string>
    <string name="change_language">Change Language</string>
    <string name="imperial_units">Imperial Units</string>
    <string name="metric_units">Metric Units</string>
    <string name="change_units">Change Units</string>
    <string name="save">save</string>
    <string name="alarm">Alarm</string>
    <string name="check_events_at">Check events at:</string>
    <string name="time">Time</string>
    <string name="rain">RAIN</string>
    <string name="temperature_">TEMP</string>
    <string name="wind">WIND</string>
    <string name="cloudsU">CLOUDS</string>
    <string name="thunderstorm">THUNDERSTORM</string>
    <string name="haze">HAZE/FOG/MIST</string>
    <string name="dayesOfTheWeek">Dayes of the week</string>
    <string name="anyTime">Anytime</string>
    <string name="periodOfTime">Period of time</string>
    <string name="from">From</string>
    <string name="to">To</string>
    <string name="description_">Description</string>
    <string name="hint_description">Please, write description</string>
    <string name="addAlarm">ADD ALARM</string>
    <string name="weatherstate">WeatherState</string>
    <string name="desc">Desc</string>
    <string name="yourDescription">Your Description</string>
    <string name="lessThan">Less Than</string>
    <string name="moreThan">More Than</string>
    <string name="EnterNumber">Number</string>
    <string name="_24hr">24hr</string>
    <string name="_48hr">48hr</string>
    <string name="_72hr">72hr</string>
    <string name="forNext">For Next</string>
    <string name="deleteAlarm">Delete Alarm!</string>
    <string name="alarmMessage">Are you Sure, You want to delete this Alarm?!</string>
    <string name="yes">YES</string>
    <string name="no">NO</string>
    <string name="snow">Snow</string>
    <string name="arabic">Arabic</string>
    <string name="metric_Choice">Metric</string>
    <string name="imperial_Choice">Imperial</string>
    <string name="skip">SKIP</string>
    <string name="alarm_rain">Rain</string>
    <string name="alarm_temp">Temperature</string>
    <string name="alarm_wind">Wind</string>
    <string name="alarm_cloudness">Cloudiness</string>
    <string name="alarmThunder">Thunderstorm</string>
    <string name="alarmfog">Fog/Mist/Haze</string>
    <string name="alarm_snow">Snow</string>
    <string name="Feherinhite">F</string>
    <string name="mileshr">miles/hr</string>
    <string name="celicious">C</string>
    <string name="mpers">m/s</string>
    <string name="msfakes">" m/s"</string>
    <string name="hpa">\" hpa\"</string>
    <string name="alarm_Dialo_Rain">Rain</string>
    <string name="Alarm_dialo_temp">Temperature</string>
    <string name="alarm_dialo_wind">Wind</string>
    <string name="alarm_dialog_cloud">Cloudiness</string>
    <string name="alarm_dialog_thunder">Thunderstorm</string>
    <string name="alarm_dialo_fog">Fog/Mist/Haze</string>
    <string name="alarm_dialog_snow">Snow</string>
    <string name="selectday">please select one day at least</string>
    <string name="number0"><![CDATA[number<= 0.0]]></string>
    <string name="numberempty">number text is empty</string>
    <string name="enterdesc">please enter your description</string>
    <string name="jdhkrfghjdgjdj">Rain</string>
    <string name="becareful">BE CAREFUL</string>
    <string name="enterTime">\"please enter time to check and activate The Alarm \"</string>
    <string name="addAlertFirst">\"please add alert first \"</string>
    <string name="alarmon">\"Alarm is ON \"</string>
    <string name="alarmoff">\"Alarm is OFF \"</string>
    <string name="connectionFailed">connection failed</string>
    <string name="loc">Location</string>
    <string name="enablelocation">Kindly enable Location to use Application properly</string>
    <string name="checkInterNet">Please check the Internet to proceed further</string>
    <string name="connect">Connect</string>
    <string name="exit">Exit</string>
    <string name="enablelocation_">Enable Location</string>
    <string name="refresh">refresh</string>
    <string name="location_">Location</string>
    <string name="emptyList">Empty List !! Please Add Some</string>
    <string name="welcome1">"Welcom "</string>
    <string name="addalarmperm">to add another alert, please un check the alarm switch first</string>
    <string name="settings">Settings</string>
    <string name="temp_Settings">Temperature</string>
    <string name="windSpeed_settings">Wind speed</string>
    <string name="C">C</string>
    <string name="F">F</string>
    <string name="mpersec">m/sec</string>
    <string name="mileperhr">mile/hr</string>
    <string name="alert">Alert</string>
</resources>