<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:padding="5dp"
    android:background="#E4E3E3">


    <androidx.cardview.widget.CardView
        android:id="@+id/cvRain"
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:layout_marginTop="5dp"
        app:cardCornerRadius="6dp"
        app:cardElevation="5dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginStart="3dp"
            android:layout_marginEnd="3dp"
            android:orientation="horizontal">

            <ca.antonious.materialdaypicker.MaterialDayPicker
                android:id="@+id/day_picker"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"

                />


        </LinearLayout>
    </androidx.cardview.widget.CardView>

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:layout_marginTop="8dp"
        android:text="@string/dayesOfTheWeek"
        android:textColor="#000000"
        app:layout_constraintStart_toStartOf="@+id/cvRain"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout3" />

    <View
        android:id="@+id/view2"
        android:layout_width="300dp"
        android:layout_height="1dp"
        android:layout_marginTop="10dp"
        android:background="#000000"
        app:layout_constraintEnd_toEndOf="@+id/cvRain"
        app:layout_constraintStart_toStartOf="@+id/cvRain"
        app:layout_constraintTop_toBottomOf="@+id/cvRain" />


    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/description_"
        android:textColor="#000000"
        app:layout_constraintStart_toStartOf="@+id/view2"
        app:layout_constraintTop_toBottomOf="@+id/view2" />

    <EditText
        android:id="@+id/description"
        android:layout_width="0dp"
        android:layout_height="40dp"
        android:layout_marginTop="8dp"
        android:ems="10"
        android:hint="@string/hint_description"
        android:inputType="textPersonName"
        android:textColor="#000000"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/textView5"
        app:layout_constraintTop_toBottomOf="@+id/textView5"
        android:background="@color/colorWhite"
        android:paddingStart="15dp"
        android:layout_marginStart="5dp"
        android:layout_marginEnd="5dp"/>

    <com.sanojpunchihewa.glowbutton.GlowButton
        android:id="@+id/addAlarmBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:padding="20dp"
        android:text="@string/addAlarm"
        android:textColor="#ffffff"
        app:buttonColor="@color/colorPrimaryDark"
        app:cornerRadius="10dp"
        app:glowColor="@color/purpul"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/cvRain"
        app:layout_constraintStart_toStartOf="@+id/cvRain"
        app:layout_constraintTop_toBottomOf="@+id/description"
        app:pressedGlowSize="20dp"
        app:unpressedGlowSize="8dp" />

    <TextView
        android:id="@+id/weatherStateTxt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/weatherstate"
        android:textColor="#000000"
        android:textSize="14sp"
        android:textStyle="bold|italic"
        app:layout_constraintStart_toStartOf="@+id/textView2"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/linearLayout3"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_marginTop="12dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="@+id/cvRain"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="@+id/weatherStateTxt"
        app:layout_constraintTop_toBottomOf="@+id/weatherStateTxt">

        <RadioGroup
            android:id="@+id/lessMoreRadioGroup"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:visibility="visible"
            android:background="@color/colorWhite">

            <RadioButton
                android:id="@+id/lessThanBtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checked="true"
                android:text="@string/lessThan" />

            <RadioButton
                android:id="@+id/moreThanBtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/moreThan" />

            <EditText
                android:id="@+id/lessMoreNumber"
                android:layout_width="60dp"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/EnterNumber"
                android:inputType="numberDecimal"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/unitTxt"
                android:layout_width="45dp"
                android:layout_height="wrap_content"
                android:text=""
                android:textSize="14sp"
                />
        </RadioGroup>
    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>