<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">



    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        >

        <LinearLayout
            android:id="@+id/linearParent"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="300dp"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                android:layout_marginBottom="10dp"
                android:layout_marginTop="10dp"
                app:cardBackgroundColor="#6452f0"
                app:cardCornerRadius="20dp"
                app:cardElevation="5dp">

                <LinearLayout

                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    android:paddingTop="10dp">

                <LinearLayout

                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:layout_gravity="center">

                    <TextView
                        android:id="@+id/tvTempeatur"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="bottom"
                        android:text="20 "
                        android:textColor="@android:color/white"
                        android:textSize="50sp"
                        android:textStyle="bold" />
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="bottom"
                        android:text="@string/feels_like"
                        android:textColor="@android:color/white"
                        android:textSize="14sp"
                        />
                    <TextView
                        android:id="@+id/feelsLike"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="bottom"
                        android:textColor="@android:color/white"
                        android:textSize="14sp"
                        />

                </LinearLayout>
                    <TextView
                        android:id="@+id/location"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginTop="8dp"
                        android:text="@string/location"
                        android:textColor="@android:color/white"
                        android:textSize="24sp"
                        android:textStyle="bold" />
                    <TextView
                        android:id="@+id/tvWeather"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginTop="4dp"
                        android:text="@string/weatherDesc"
                        android:textColor="@android:color/white"
                        android:textSize="14sp"
                        android:textStyle="bold" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="15dp"
                        android:layout_marginTop="18dp"
                        android:orientation="vertical">



                        <TextView
                            android:id="@+id/DateTxt"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:gravity="center"
                            android:text="@string/Date"
                            android:textColor="@android:color/white"
                            android:textSize="18sp" />






                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="10dp"
                            android:gravity="center"
                            android:text="@string/windspeed"
                            android:textColor="@android:color/white"
                            android:textSize="14sp" />

                        <TextView
                            android:id="@+id/windSpeedTxt"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="10dp"
                            android:gravity="center"
                            android:textColor="@android:color/white"
                            android:textSize="14sp" />

                    </LinearLayout>


                        <LinearLayout
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:orientation="horizontal">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="5dp"
                            android:gravity="center"
                            android:text="@string/Humidity"
                            android:textColor="@android:color/white"
                            android:textSize="14sp" />


                            <TextView
                                android:id="@+id/humidityTxt"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginTop="5dp"
                                android:gravity="center"
                                android:textColor="@android:color/white"
                                android:textSize="14sp" />

                        </LinearLayout>

                        <LinearLayout
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:orientation="horizontal">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="5dp"
                            android:gravity="center"
                            android:text="@string/Pressure"
                            android:textColor="@android:color/white"
                            android:textSize="14sp" />

                            <TextView
                                android:id="@+id/pressure"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginTop="5dp"
                                android:gravity="center"
                                android:textColor="@android:color/white"
                                android:textSize="14sp" />

                        </LinearLayout>


                        <LinearLayout
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:orientation="horizontal">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="5dp"
                            android:gravity="center"
                            android:text="@string/clouds"
                            android:textColor="@android:color/white"
                            android:textSize="14sp" />

                            <TextView
                                android:id="@+id/clouds"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginTop="5dp"
                                android:gravity="center"
                                android:textColor="@android:color/white"
                                android:textSize="14sp" />


                        </LinearLayout>

                    </LinearLayout>

                </LinearLayout>

                <com.airbnb.lottie.LottieAnimationView
                    android:id="@+id/iconTemp"
                    android:layout_width="150dp"
                    android:layout_height="150dp"
                    android:layout_gravity="end|bottom"
                    android:layout_marginEnd="10dp"
                    app:lottie_autoPlay="true"
                    app:lottie_loop="true"
                    tools:ignore="RtlCompat" />

            </androidx.cardview.widget.CardView>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="10dp"
                android:text="@string/nextHourly"
                android:textColor="@android:color/black"
                android:textSize="20sp"
                android:textStyle="bold"
                tools:ignore="RtlCompat" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rvListWeatherHome"
                android:layout_width="match_parent"
                android:layout_height="match_parent" />


        </LinearLayout>

    </androidx.core.widget.NestedScrollView>



</RelativeLayout>