<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#ECECEC"

    >


    <androidx.cardview.widget.CardView
        android:id="@+id/cardView2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        app:cardBackgroundColor="#6452f0"
        app:cardCornerRadius="20dp"
        app:cardElevation="5dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout

            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">


            <TextView
                android:id="@+id/tvAlarm"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:gravity="center_vertical"
                android:text="@string/alarm"
                android:textColor="@android:color/white"
                android:textSize="24sp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />


            <ImageView
                android:id="@+id/imgAlarm"
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:layout_gravity="center"
                android:layout_marginStart="156dp"
                android:src="@drawable/alarm"
                app:layout_constraintBottom_toBottomOf="@+id/tvAlarm"
                app:layout_constraintStart_toEndOf="@+id/tvAlarm"
                app:layout_constraintTop_toTopOf="@+id/tvAlarm"
                app:layout_constraintVertical_bias="0.285" />

            <Switch
                android:id="@+id/alarmCheck"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"

                android:layout_marginStart="13dp"
                android:backgroundTint="#3C000000"
                android:checked="true"
                android:hapticFeedbackEnabled="false"
                android:textColorHighlight="#D51111"
                android:textColorLink="#D32F2F"
                app:layout_constraintBottom_toBottomOf="@+id/imgAlarm"
                app:layout_constraintStart_toEndOf="@+id/imgAlarm"
                app:layout_constraintTop_toTopOf="@+id/imgAlarm"
                app:layout_constraintVertical_bias="0.0"
                tools:ignore="UseSwitchCompatOrMaterialXml" />

            <LinearLayout
                android:id="@+id/checkEventLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginStart="16dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="16dp"
                android:orientation="horizontal"
                app:layout_constraintEnd_toEndOf="@+id/alarmCheck"
                app:layout_constraintHorizontal_bias="0.142"
                app:layout_constraintStart_toStartOf="@+id/tvAlarm"
                app:layout_constraintTop_toBottomOf="@+id/tvAlarm">


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginTop="3dp"
                        android:layout_marginEnd="10dp"
                        android:text="@string/check_events_at"
                        android:textColor="@android:color/white"
                        android:textSize="18sp"
                        android:textStyle="bold" />

                    <EditText
                        android:id="@+id/checkEventTimeTextInput"
                        android:layout_width="130dp"
                        android:layout_height="45dp"
                        android:layout_gravity="center_vertical"
                        android:layout_marginStart="30dp"
                        android:layout_marginEnd="5dp"
                        android:background="@drawable/rounded_edittext"
                        android:clickable="true"
                        android:drawableStart="@drawable/time"
                        android:drawablePadding="20dp"
                        android:editable="false"
                        android:hint="@string/time"
                        android:paddingStart="10dp"
                        android:textColor="#6452f0"
                        android:textSize="20sp"
                        android:textStyle="bold" />

                </LinearLayout>

            </LinearLayout>


            <RadioGroup
                android:id="@+id/fornextradioGroup"
                android:layout_width="wrap_content"
                android:layout_height="48dp"
                android:layout_marginTop="16dp"
                android:layout_marginBottom="16dp"
                android:orientation="horizontal"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="@+id/checkEventLayout"
                app:layout_constraintTop_toBottomOf="@+id/checkEventLayout">

                <RadioButton
                    android:id="@+id/R24hr"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="10dp"
                    android:checked="true"
                    android:text="@string/_24hr"
                    android:textColor="#ffffff" />

                <RadioButton
                    android:id="@+id/R48hr"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="10dp"
                    android:text="@string/_48hr"
                    android:textColor="#ffffff" />

                <RadioButton
                    android:id="@+id/R72hr"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/_72hr"
                    android:textColor="#ffffff" />
            </RadioGroup>

        </androidx.constraintlayout.widget.ConstraintLayout>


    </androidx.cardview.widget.CardView>


    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rvListWeatherHome"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_margin="16dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cardView2" />


    <com.tuann.floatingactionbuttonexpandable.FloatingActionButtonExpandable
        android:id="@+id/fabAlarm"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="5dp"
        android:visibility="gone"
        app:fab_bg_color="@color/blue"
        app:fab_content="@string/addAlarm"
        app:fab_duration="400"
        app:fab_icon="@drawable/alarm_add"
        app:layout_constraintBottom_toBottomOf="@+id/rvListWeatherHome"
        app:layout_constraintEnd_toEndOf="parent" />

    <com.airbnb.lottie.LottieAnimationView
        android:visibility="gone"
        android:id="@+id/emptyImage"
        android:layout_width="350dp"
        android:layout_height="350dp"
        app:layout_constraintBottom_toBottomOf="@+id/rvListWeatherHome"
        app:layout_constraintEnd_toEndOf="@+id/rvListWeatherHome"
        app:layout_constraintHorizontal_bias="0.666"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/rvListWeatherHome"
        app:layout_constraintVertical_bias="0.325"
        app:lottie_autoPlay="true"
        app:lottie_loop="true"
        app:lottie_rawRes="@raw/empty" />

    <TextView
        android:visibility="gone"
        android:id="@+id/emptyListTxt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="155dp"
        android:text="@string/emptyList"
        android:textColor="#000000"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/emptyImage"
        app:layout_constraintEnd_toEndOf="@+id/emptyImage"
        app:layout_constraintStart_toStartOf="@+id/emptyImage"
        app:layout_constraintTop_toTopOf="@+id/emptyImage" />


</androidx.constraintlayout.widget.ConstraintLayout>